(chores): refactor depricated code, remove unused code
Signed-off-by: Abdul Kapti <abdul.kapti@siemens-healthineers.com>